alignment issues

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -31,6 +31,10 @@ h4 {
   }
 }
 
+.wrapper-class {
+  @apply px-2 xl:px-4 pb-10 pt-4;
+}
+
 .only-dev-visible,
 .only-dev-visible-small {
   border: 1px solid #9400d3;
